# loft

./: CHANGELOG.md  LICENSE  Loft.cabal  README.md  cabal.project  client_session_key.aes  haskelltest.db
app/: loft.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: b56-0.1.1-inplace.conf  loft-0.1.1-inplace.conf  package.cache
src/Loft/: Data.hs  Load.hs
src/Loft/Data/: Structure.hs
